updated product: title left & spacing fixes

--- a/assets/base.css
+++ b/assets/base.css
@@ -5127,11 +5127,11 @@ details-disclosure > details {
     display: none;
   }
 }
-@media only screen and (min-width: 750px) {
+/* @media only screen and (min-width: 750px) {
   .template--product #MainContent > *:nth-child(3) {
     max-width: 65rem;
   }
-}
+} */
 @media only screen and (min-width: 990px) {
   .template--product #MainContent > *:nth-child(1) > * {
     position: sticky;
@@ -7371,7 +7371,8 @@ details-disclosure > details {
   text-decoration: underline;
 }
 .template--article-field-notes-article h1,
-.collection-hero__title {
+.collection-hero__title,
+.product__title {
   line-height: 1.3;
   letter-spacing: 2px;
   font-size: 30px;
